removed mandator-sporades from words

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,5 @@
 *idea/
 experiments/private_key_aws/pasindu2023
 experiments/private_key_aws/pasindu2023.pub
-mandator-sporades/vendor/
-pipelined-sporades/vendor/
+sadl-racs/vendor/
 venv/
