checked all gitignore build go.mod go.sum LICENCE

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,5 @@
 *.txt
 *.zip
 *idea/
-experiments/private_key_aws/pasindu2023
-experiments/private_key_aws/pasindu2023.pub
-sadl-racs/vendor/
+vendor/
 venv/
